# ComfyUI

./: Pipfile  folder_paths.py  main.py  nodes.py  pyproject.toml  run_nvidia_gpu.bat
app/: model_manager.py
comfy/: cli_args.py
comfy_extras/: nodes_audio.py  nodes_hunyuan3d.py  nodes_images.py  nodes_video_model.py
