[project]
name = "ComfyUI"
requires-python = ">=3.10"
version = "0.3.40"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "torchsde",
    "einops",
    "transformers>=4.28.1",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "pyyaml",
    "pillow",
    "scipy",
    "tqdm",
    "psutil",
    "kornia>=0.7.1",
    "spandrel",
    "soundfile",
    "minio",
    "comfyui-frontend-package==1.21.7",
    "comfyui-workflow-templates==0.1.25",
    "numpy>=1.25.0",
    "yarl>=1.18.0",
    "av>=14.1.0",
    "pydantic~=2.0",
    "torch",
    "torchvision",
    "torchaudio",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[dependency-groups]
dev = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "pip_conf_index_global"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb"]
